[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[node name="Player" type="Area2D"]
position = Vector2( 486.056, 278.621 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -10, 10, 10, 10, 0, -20, -10, 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -20, 10, 10, -10, 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
